# AutomationScripts

./: .gitignore  CameraFilesSort.py  Constants.py  LICENCE.md  README.md  SonyConvertToJPG.py  main.py  pyproject.toml  readme.md
integrations/macos/: install.sh  uninstall.sh
integrations/macos/Sort Photos with PhotoSort.workflow/Contents/: Info.plist  document.wflow
src/photosort/: __init__.py  __main__.py  cli.py  constants.py  sorter.py
